# bevy-shaders

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/shaders/: blinking_led.wgsl  led.wgsl  text.wgsl
examples/: blinking_led.rs  led.rs  text.rs
src/: blinking_led.rs  color.rs  led.rs  lib.rs  prelude.rs  shaders.rs  text.rs
