[package]
name = "bevy-shaders"
description = "A collection of shaders for Bevy 💠"
version = "0.2.0"
edition = "2021"
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
documentation = "https://docs.rs/bevy-shaders"
readme = "README.md"
homepage = "https://github.com/SKY-ALIN/bevy-shaders"
repository = "https://github.com/SKY-ALIN/bevy-shaders"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "bevy", "shaders", "WGSL"]
categories = ["game-development", "graphics", "gui", "rendering"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "/assets"
]

[lib]
name = "bevy_shaders"
path = "src/lib.rs"

[dependencies]
bevy = "0.15.1"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.0"

[dev-dependencies]
bevy_flycam = "0.15.0"

[[example]]
name = "led"
path = "examples/led.rs"

[[example]]
name = "blinking_led"
path = "examples/blinking_led.rs"

[[example]]
name = "text"
path = "examples/text.rs"
